# Qt5-Calculator

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Calculator.hpp.C9A482D4EAE6BAC1.idx  CalculatorWindow.hpp.BBCCD531BC8598E2.idx  main.cpp.BB504FC7311BCDCA.idx  moc_CalculatorWindow.cpp.C45A4DE18EDCC94A.idx  mocs_compilation.cpp.48A8433949EFB7A3.idx  qrc_qml.cpp.B55556D38CDC1DEB.idx
resources/: CalcButton.qml  Calculator.qml  MainMenu.qml  SecretButton.qml  SecretMenu.qml  qml.qrc
src/: Calculator.cpp  Calculator.hpp  CalculatorWindow.cpp  CalculatorWindow.hpp  main.cpp  types.hpp
